Universal amazon lin

--- a/_books/bushlandia-magic-imagination-australian-bush.html
+++ b/_books/bushlandia-magic-imagination-australian-bush.html
@@ -62,7 +62,7 @@ amazon:
     status: "coming_soon"  # pending | available | coming_soon
   paperback:
     asin: "1764423003"
-    url: "https://www.amazon.com.au/dp/1764423003"
+    url: "https://www.amazon.com/dp/1764423003"  # Universal link - auto-redirects to user's local Amazon marketplace
     price: "$15.39 AUD"  # Estimated price
     print_length: 48  # KDP uses print length, not page count
     status: "available"
@@ -71,12 +71,6 @@ amazon:
     url: ""   # Will be populated when audiobook is published
     price: "$14.99 AUD"  # Estimated price
     status: "pending"  # pending | available | coming_soon
-  
-  # Marketplace-specific links (optional, for future)
-  marketplaces:
-    au: "https://www.amazon.com.au/dp/1764423003"  # Primary marketplace (Amazon.com.au)
-    us: ""  # If expanding to Amazon.com
-    uk: ""  # If expanding to Amazon.co.uk
 
 # Primary format (for display purposes)
 format: "Paperback"  # Primary format planned
@@ -102,7 +96,7 @@ faq:
     answer: "Bushlandia is perfect for children aged 7-10 years old. The story's themes of creativity, teamwork, and environmental responsibility resonate well with this age group, making it ideal for independent readers or family read-aloud sessions."
   
   - question: "Where can I buy this book?"
-    answer: "Bushlandia is now available as a paperback on Amazon.com.au. You can purchase it directly on Amazon or follow the links on this page to head straight to the book."
+    answer: "Bushlandia is now available as a paperback on Amazon in multiple markets worldwide. You can purchase it directly on Amazon or follow the links on this page to head straight to the book."
   
   - question: "Is this available as an ebook or paperback?"
     answer: "Bushlandia is currently available in paperback, with Kindle ebook and premium hardcover formats planned for the future. Subscribe to our newsletter for updates on new formats and launch announcements."
