--- a/author.html
+++ b/author.html
@@ -123,7 +123,7 @@ permalink: /author/
              data-format="paperback"
              {% if book.amazon.paperback.asin != "" %}data-asin="{{ book.amazon.paperback.asin }}"{% endif %}
              data-track="amazon">
-            Buy on Amazon.com.au
+            Buy on Amazon
           </a>
           {% else %}
           <p class="book-status-small">{{ book.status }}</p>
