--- a/books.html
+++ b/books.html
@@ -59,7 +59,7 @@ permalink: /books/
                data-format="paperback"
                {% if book.amazon.paperback.asin != "" %}data-asin="{{ book.amazon.paperback.asin }}"{% endif %}
                data-track="amazon">
-              Buy on Amazon.com.au
+              Buy on Amazon
             </a>
             {% elsif book.status %}
             <p class="book-status-small">{{ book.status }}</p>
