--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ keywords: "Australian children's books, kids books australia, counting books, na
                data-format="paperback"
                {% if book.amazon.paperback.asin != "" %}data-asin="{{ book.amazon.paperback.asin }}"{% endif %}
                data-track="amazon">
-              Buy on Amazon.com.au
+              Buy on Amazon
             </a>
             {% else %}
             <p class="book-card-status">{{ book.status }}</p>
