--- a/author.html
+++ b/author.html
@@ -117,14 +117,25 @@ permalink: /author/
               {% endif %}
             </p>
           {% endif %}
-          {% if book.amazon and book.amazon.paperback and book.amazon.paperback.status == "available" and book.amazon.paperback.url != "" and book.amazon.paperback.url != "#" %}
-          <a href="{{ book.amazon.paperback.url }}"
-             class="book-status-buy-pill"
-             data-format="paperback"
-             {% if book.amazon.paperback.asin != "" %}data-asin="{{ book.amazon.paperback.asin }}"{% endif %}
-             data-track="amazon">
-            Buy on Amazon
-          </a>
+          {% if book.amazon and book.amazon.paperback and book.amazon.paperback.status == "available" %}
+            {% if book.amazon.paperback.marketplaces %}
+              <a href="{{ book.url | relative_url }}#buy"
+                 class="book-status-buy-pill"
+                 data-format="paperback"
+                 {% if book.amazon.paperback.asin != "" %}data-asin="{{ book.amazon.paperback.asin }}"{% endif %}>
+                Buy on Amazon
+              </a>
+            {% elsif book.amazon.paperback.url != '' and book.amazon.paperback.url != '#' %}
+              <a href="{{ book.amazon.paperback.url }}"
+                 class="book-status-buy-pill"
+                 data-format="paperback"
+                 {% if book.amazon.paperback.asin != "" %}data-asin="{{ book.amazon.paperback.asin }}"{% endif %}
+                 data-track="amazon">
+                Buy on Amazon
+              </a>
+            {% else %}
+              <p class="book-status-small">{{ book.status }}</p>
+            {% endif %}
           {% else %}
           <p class="book-status-small">{{ book.status }}</p>
           {% endif %}
