--- a/_books/bushlandia-magic-imagination-australian-bush.html
+++ b/_books/bushlandia-magic-imagination-australian-bush.html
@@ -3,7 +3,7 @@ title: "Bushlandia"
 sub_title: "The Magic of Imagination in the Australian Bush"
 author: 
   name: Rebecca Mola
-  url: /author/
+  url: /author/rebecca-mola/
 order: 3
 status: Available
 age_range: "7-10 years"
