--- a/_books/bushlandia-skyseed-experiment.html
+++ b/_books/bushlandia-skyseed-experiment.html
@@ -3,7 +3,7 @@ title: "Bushlandia"
 sub_title: "The Skyseed Experiment"
 author: 
   name: Rebecca Mola
-  url: /author/
+  url: /author/rebecca-mola/
 order: 5
 status: Coming Soon
 age_range: "7-10 years"
