--- a/_books/imagineif.html
+++ b/_books/imagineif.html
@@ -3,7 +3,7 @@ title: "Imagine if..."
 sub_title: "A Silly Animal Adventure"
 author:
   name: Rebecca Mola
-  url: /author/
+  url: /author/rebecca-mola/
 order: 1
 status: Coming Soon
 age_range: "2-6 years"
