--- a/_books/one-puppy-two-puppies.html
+++ b/_books/one-puppy-two-puppies.html
@@ -3,7 +3,7 @@ title: "One Puppy, Two Puppies, Hey What Do You Do?"
 sub_title: ""
 author:
   name: Rebecca Mola
-  url: /author/
+  url: /author/rebecca-mola/
 order: 2
 status: Coming Soon
 age_range: "0-4 years"
