--- a/_books/bushlandia-magic-imagination-australian-bush.html
+++ b/_books/bushlandia-magic-imagination-australian-bush.html
@@ -1,5 +1,5 @@
 ---
-title: "Bushlandia"
+title: "Bushlandia - The Magic of Imagination in the Australian Bush"
 sub_title: "The Magic of Imagination in the Australian Bush"
 author: 
   name: Rebecca Mola
