--- a/_books/bushlandia-secret-sound-hollow.html
+++ b/_books/bushlandia-secret-sound-hollow.html
@@ -1,5 +1,5 @@
 ---
-title: "Bushlandia"
+title: "Bushlandia - The Secret of the Sound Hollow"
 sub_title: "The Secret of the Sound Hollow"
 author: 
   name: Rebecca Mola
