--- a/_books/bushlandia-skyseed-experiment.html
+++ b/_books/bushlandia-skyseed-experiment.html
@@ -1,5 +1,5 @@
 ---
-title: "Bushlandia"
+title: "Bushlandia - The Skyseed Experiment"
 sub_title: "The Skyseed Experiment"
 author: 
   name: Rebecca Mola
