--- a/_books/imagineif.html
+++ b/_books/imagineif.html
@@ -1,5 +1,5 @@
 ---
-title: "Imagine if..."
+title: "Imagine if... - A Silly Animal Adventure"
 sub_title: "A Silly Animal Adventure"
 author:
   name: Rebecca Mola
