Improved preview images

--- a/_books/bushlandia-secret-sound-hollow.html
+++ b/_books/bushlandia-secret-sound-hollow.html
@@ -7,6 +7,7 @@ author:
 order: 4
 status: Coming Soon
 age_range: "7-10 years"
+image: /assets/images/books/bushlandia-cover-square-medium.jpg
 
 # Series Information
 series:
@@ -73,6 +74,10 @@ amazon:
 
 # Primary format (for display purposes)
 format: "Paperback"
+
+# Social Sharing
+og_image: "/assets/images/books/bushlandia-cover-square-medium.jpg"
+twitter_image: "/assets/images/books/bushlandia-cover-square-medium.jpg"
 
 # FAQ
 faq:
