--- a/_books/one-puppy-two-puppies.html
+++ b/_books/one-puppy-two-puppies.html
@@ -7,6 +7,7 @@ author:
 order: 2
 status: Coming Soon
 age_range: "0-4 years"
+image: /assets/images/books/onepuppytwopuppies-cover-square-medium.jpg
 category: "Counting"
 cover_image: "/assets/images/books/onepuppytwopuppies-cover-large.jpg"
 features:
@@ -68,8 +69,8 @@ amazon:
 format: "Paperback"  # Primary format planned
 
 # Social Sharing
-og_image: "/assets/images/books/onepuppytwopuppies-og.jpg"
-twitter_image: "/assets/images/books/onepuppytwopuppies-twitter.jpg"
+og_image: "/assets/images/books/onepuppytwopuppies-cover-square-medium.jpg"
+twitter_image: "/assets/images/books/onepuppytwopuppies-cover-square-medium.jpg"
 
 # Book Preview
 preview_images:
