--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Wild Imagination Press | Australian Children's Books
 description: "Wild Imagination Press publishes enchanting Australian children's books. From counting puppies to bush adventures, our stories nurture creativity in ages 0-10. Coming soon to Amazon."
 keywords: "Australian children's books, kids books australia, counting books, nature stories, environmental books kids, ages 0-10, independent publisher"
+image: /assets/images/wild-imagination-logo.jpg
 ---
 
 <section class="hero">
@@ -12,7 +13,6 @@ keywords: "Australian children's books, kids books australia, counting books, na
     </div>
     <h1>Where Stories Grow Like Magic</h1>
     <p class="hero-subtitle">Creating enchanting children's books to nurture creativity and imagination</p>
-    
     <div class="coming-soon">
       <h2>Coming Soon!</h2>
       <div class="hero-book-content">
