--- a/_books/bushlandia-magic-imagination-australian-bush.html
+++ b/_books/bushlandia-magic-imagination-australian-bush.html
@@ -1,5 +1,6 @@
 ---
 title: "Bushlandia - The Magic of Imagination in the Australian Bush"
+book_title: "Bushlandia"
 sub_title: "The Magic of Imagination in the Australian Bush"
 author: 
   name: Rebecca Mola
