--- a/_books/bushlandia-skyseed-experiment.html
+++ b/_books/bushlandia-skyseed-experiment.html
@@ -1,5 +1,6 @@
 ---
 title: "Bushlandia - The Skyseed Experiment"
+book_title: "Bushlandia"
 sub_title: "The Skyseed Experiment"
 author: 
   name: Rebecca Mola
