--- a/_books/imagineif.html
+++ b/_books/imagineif.html
@@ -1,5 +1,6 @@
 ---
 title: "Imagine if... - A Silly Animal Adventure"
+book_title: "Imagine if..."
 sub_title: "A Silly Animal Adventure"
 author:
   name: Rebecca Mola
