--- a/_books/one-puppy-two-puppies.html
+++ b/_books/one-puppy-two-puppies.html
@@ -1,5 +1,6 @@
 ---
 title: "One Puppy, Two Puppies, Hey What Do You Do?"
+book_title: "One Puppy, Two Puppies, Hey What Do You Do?"
 sub_title: ""
 author:
   name: Rebecca Mola
