Consisten pills for book cards

--- a/_books/bushlandia-magic-imagination-australian-bush.html
+++ b/_books/bushlandia-magic-imagination-australian-bush.html
@@ -33,9 +33,9 @@ bisac_codes:
   - "JUV029010"  # Nature & the Natural World / Environment
   - "JUV001000"  # Action & Adventure / General
 amazon_categories:
-  - "Children's Books > Science, Nature & How It Works > Nature"
-  - "Children's Books > Action & Adventure"
-  - "Children's Books > Animals"
+  - "Children's Books › Geography & Cultures › Explore the World › Australia & Oceania"
+  - "Children's Books › Growing Up & Facts of Life › Friendship"
+  - "Children's Books › Science, Nature & How It Works › Environment"
 
 # Disable jekyll-seo-tag JSON-LD; use custom Book JSON-LD from layout
 seo:
