--- a/_books/bushlandia-magic-imagination-australian-bush.html
+++ b/_books/bushlandia-magic-imagination-australian-bush.html
@@ -33,9 +33,9 @@ bisac_codes:
   - "JUV029010"  # Nature & the Natural World / Environment
   - "JUV001000"  # Action & Adventure / General
 amazon_categories:
-  - "Children's Books › Geography & Cultures › Explore the World › Australia & Oceania"
-  - "Children's Books › Growing Up & Facts of Life › Friendship"
-  - "Children's Books › Science, Nature & How It Works › Environment"
+  - "Children's Books > Geography & Cultures > Explore the World > Australia & Oceania"
+  - "Children's Books > Growing Up & Facts of Life > Friendship"
+  - "Children's Books > Science, Nature & How It Works > Environment"
 
 # Disable jekyll-seo-tag JSON-LD; use custom Book JSON-LD from layout
 seo:
@@ -48,7 +48,7 @@ keywords: "Australian children's books, bush adventure, environmental stories, n
 
 # Book Details
 published_date: "2025-12-01"
-isbn: "TBA"
+isbn: "978-1764423007"
 page_count: 48
 publisher: "Wild Imagination Press"
 
@@ -56,17 +56,73 @@ publisher: "Wild Imagination Press"
 # Note: Kindle, Paperback, and Audiobook formats are supported
 amazon:
   kindle:
-    asin: ""  # Will be populated when KDP account is active
-    url: ""   # Will be populated when book is published
-    price: "$4.99 AUD"  # Estimated price
-    ku_eligible: true  # Plan for Kindle Unlimited enrollment
-    status: "coming_soon"  # pending | available | coming_soon
+    asin: "B0G4WK82KD"
+    price: "$1.99 AUD"
+    ku_eligible: true
+    status: "available"
+    marketplaces:
+      au:
+        url: "https://www.amazon.com.au/dp/B0G4WK82KD"
+        name: "Australia"
+        flag: "🇦🇺"
+        primary: true  # Primary market
+      us:
+        url: "https://www.amazon.com/dp/B0G4WK82KD"
+        name: "United States"
+        flag: "🇺🇸"
+      uk:
+        url: "https://www.amazon.co.uk/dp/B0G4WK82KD"
+        name: "United Kingdom"
+        flag: "🇬🇧"
+      de:
+        url: "https://www.amazon.de/dp/B0G4WK82KD"
+        name: "Germany"
+        flag: "🇩🇪"
+      fr:
+        url: "https://www.amazon.fr/dp/B0G4WK82KD"
+        name: "France"
+        flag: "🇫🇷"
+      es:
+        url: "https://www.amazon.es/dp/B0G4WK82KD"
+        name: "Spain"
+        flag: "🇪🇸"
+      it:
+        url: "https://www.amazon.it/dp/B0G4WK82KD"
+        name: "Italy"
+        flag: "🇮🇹"
+      nl:
+        url: "https://www.amazon.nl/dp/B0G4WK82KD"
+        name: "Netherlands"
+        flag: "🇳🇱"
+      pl:
+        url: "https://www.amazon.pl/dp/B0G4WK82KD"
+        name: "Poland"
+        flag: "🇵🇱"
+      se:
+        url: "https://www.amazon.se/dp/B0G4WK82KD"
+        name: "Sweden"
+        flag: "🇸🇪"
+      be:
+        url: "https://www.amazon.com.be/dp/B0G4WK82KD"
+        name: "Belgium"
+        flag: "🇧🇪"
+      ie:
+        url: "https://www.amazon.ie/dp/B0G4WK82KD"
+        name: "Ireland"
+        flag: "🇮🇪"
+      jp:
+        url: "https://www.amazon.co.jp/dp/B0G4WK82KD"
+        name: "Japan"
+        flag: "🇯🇵"
+      ca:
+        url: "https://www.amazon.ca/dp/B0G4WK82KD"
+        name: "Canada"
+        flag: "🇨🇦"
   paperback:
     asin: "1764423003"
-    price: "$15.39 AUD"
+    price: "$19.99 AUD"
     print_length: 48  # KDP uses print length, not page count
     status: "available"
-    # Multiple marketplace support - same ASIN via Expanded Distribution
     marketplaces:
       au:
         url: "https://www.amazon.com.au/dp/1764423003"
