--- a/_books/bushlandia-magic-imagination-australian-bush.html
+++ b/_books/bushlandia-magic-imagination-australian-bush.html
@@ -37,14 +37,15 @@ amazon_categories:
   - "Children's Books > Growing Up & Facts of Life > Friendship"
   - "Children's Books > Science, Nature & How It Works > Environment"
 
-# Disable jekyll-seo-tag JSON-LD; use custom Book JSON-LD from layout
+# SEO Configuration
 seo:
   json_ld: false
-  type: WebPage
+  type: Book
+canonical_url: https://wildimaginationpress.com/books/bushlandia-magic-imagination-australian-bush/
 
 # SEO & Marketing
-description: "An enchanting Australian bush adventure where four kids create their own nature town, learning environmental responsibility, teamwork, and the magic of imagination."
-keywords: "Australian children's books, bush adventure, environmental stories, nature exploration, kids 7-10, sustainability, teamwork, creative play, Australian wildlife, outdoor adventure"
+description: "Bushlandia by Rebecca Mola - An enchanting Australian bush adventure book where four children create their own nature town. Perfect for ages 7-10, teaching environmental stewardship, teamwork and imagination through Australian wildlife adventures."
+keywords: "Bushlandia, The Magic of Imagination in the Australian Bush, Rebecca Mola, Australian children's books, bush adventure story, environmental education books for kids, Australian wildlife books, nature exploration children, sustainability books kids, Bushlandia series, Australian fiction ages 7-10"
 
 # Book Details
 published_date: "2025-12-01"
